--- a/app/views/layouts/_myssp_group_data.html.erb
+++ b/app/views/layouts/_myssp_group_data.html.erb
@@ -15,6 +15,15 @@
            <th>Start Date</th><td class='table_data'><%= @screen_info[:start_date].strftime("%m/%d/%y") %></td>
            <th>End Date</th><td class='table_data'><%= @screen_info[:end_date].strftime("%m/%d/%y") %></td>
          </tr>
+         <tr>
+           <th>Group Status</th><td class='table_data'>
+                <% if @screen_info[:group_status] == 'registration' %>
+                    Registered, not scheduled
+                <% else %>
+                    Scheduled
+                <% end %></td>
+
+         </tr>
      </table>
    </div>
    </div>
