--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -2,7 +2,8 @@
 <div id='active_admin_content'>
     <div id='register_header'>
         <h4><%= link_to "Help with scheduling a group", "http://www.sierraserviceproject.org/2013/MySSP Registration User Guide.pdf" %></h4>
-        <h4 id="request_link">"What's popular? See what weeks are most impacted."</h4>
+        <img id="request_link" class="reg_buttons popular_button">
+        <div class="clear"></div>
         <div class="hidden" id="request_data"></div>
         <h3>This online system has been set up for your convenience. If you run into problems, refer to the user guide
           accessible through the 'Help' link above. Also, don't hesitate to pick up the phone and call Meghan at 916-488-6441 
