--- a/app/views/registration/_request_matrix.html.erb
+++ b/app/views/registration/_request_matrix.html.erb
@@ -1,12 +1,7 @@
 <h2 class="modal_heading">Current Requests by Site and Week</h2>
-<p>Below is current snapshot of all of the first-choice requests for our summer program.  How should you use this information?</p>
-<p>If your first choice is one of those sessions which is very popular (more than 60 requests) there is a good possibility that we will not be
-able to schedule you. Sierra Service Project is a community of churches, and our goal is to make this experience available to the maximum number
-of you people possible. This means that we ask you to be flexible about your summer plans and give us several alternatives to your first choice.</p>
-<p>If your first choice is one of the popular session, please select two less popular sessions as your second or third choice. We will still try to
-put you in your first choice, but we are unable to, by selecting a less popular option as your second or third choices, we should be able to schedule
-you for one of these choices.</p>
-<%=  %>
+<p>Below is a current snapshot of the first-choice requests for our summer program. How should you use this information?</p>
+<p>If you first choice is a session that is very popular (more than 60 requests for Sr. High and 45 for Jr. High) there is a good possibility that we will not be able to schedule your group then. Sierra Service Project is a community of churches, and our goal is to make this experience available to the maximum number of people possible. Because of that, we ask that you also be flexible with your summer plans and select several alternative sessions your group is interested in attending.
+<p>If your first choice is highly impacted please select two additional sessions as your second and third choices. We will do our best to schedule your group in your first choice, but if we are unable to we should be able to schedule your group for one of your other choices.</p>  
 <table border="0" cellspacing="0" cellpadding="0">
   <thead>
   <tr>
