--- a/app/views/registration/_terms_and_conditions.html.erb
+++ b/app/views/registration/_terms_and_conditions.html.erb
@@ -4,9 +4,9 @@
           <li>1. All payments made to SSP are nonrefundable and nontransferable.</li>
           <li>2. A 10 percent late fee will be applied to the balance of any payment that is made after the required payment due date.</li>
           <li>3. Your second payment is due on March 1, 2013 and your final payment is due on June 1, 2013.</li>
-          <li>4. All adult volunteers must have undergone a national criminal background screening process and must be suitable to work with youth./li>
+          <li>4. All adult volunteers must have undergone a national criminal background screening process and must be suitable to work with youth.</li>
           <li>5. Volunteers are not covered by Workers' Compensation and each participant, both youth and adult, is responsible for his/her own medical expenses while at the project./li>
-          <li>5. Email is the primary means of communicating (other than via the phone) with SSP.</li>
+          <li>6. Email is the primary means of communicating (other than via the phone) with SSP.</li>
         </ul>
   <%= check_box_tag("accept_terms", "accepted", false) %>
   <label>I have read and accept these terms and conditions.</label>
