--- a/app/views/liaisons/show.html.erb
+++ b/app/views/liaisons/show.html.erb
@@ -53,7 +53,7 @@
                                     <td><%= link_to g.name, admin_registration_path(g.id),
                                                 :title => 'Click to view details of this request' %></td>
                                 <% else %>
-                                  <td><%= link_to g.name, "#",
+                                  <td><%= link_to g.name, edit_registration_path(g.id),
                                                   :title => 'Make changes to your request' %></td>
                                 <% end %>
                                 <td><%= Session.find(g.request1).name %></td>
