--- a/app/views/scheduled_groups/new.html.erb
+++ b/app/views/scheduled_groups/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "print", :media => "print" %>
 <%= form_for(@scheduled_group) do |r| %>
  <div id="active_admin_content"  class="without_sidebar">
     <div id="main_content_wrapper">
@@ -6,12 +7,13 @@
             <div class="panel_contents">
             <div class="attributes_table liaison" id="attributes_table_liaison_3">
               <%= render 'layouts/scheduled_group_table' %>
-              <h3>To complete the scheduling of this group, press Confirm below. Otherwise, Cancel or return to the previous screen.</h3>
+              <h3>This group has been scheduled. Use the buttons below to send a confirming email to the liaison, print the page or return to the registrations page.</h3>
               <div class="actions">
-                <%= submit_tag 'Confirm', { :confirm => "Are you sure you want to complete this transaction?", :regid => @scheduled_group.registration_id } %>
-                <%= submit_tag "Cancel", { :confirm => "Are you sure you want to cancel and return to the Requests page?" } %>
+                <%= submit_tag 'Send Confirmation Email',  :id => @scheduled_group.id, :info =>"email"  %>
+                <span class="print"><%= submit_tag "Print This Page", :id => @scheduled_group.id, :info =>"email" %></span>
+                <%= link_to "Return to Registrations Page", "#" %>
               </div>
- <% end %>
+             <% end %>
             </div>
             </div>
           </div>
